--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <main class="main">
       <section id="hero" class="hero section dark-background">
 
-      <img  src="assets/img/WhatsApp Image 2025-03-30 at 16.00.26.jpeg" alt="" data-aos="fade-in">
+    <img src="assets/img/WhatsApp Image 2025-03-30 at 16.00.26.jpeg" alt="SAITM Image" data-aos="fade-in" loading="lazy">
       <!-- <div class="myVideo">
       <video autoplay muted loop id="myVideo">
         <source src="./assets/img/saitm-video.mp4" type="video/mp4">
